[gd_scene load_steps=28 format=3 uid="uid://ds5oq3m0fx62g"]

[ext_resource type="Script" path="res://script/morgan.gd" id="1_i46ug"]
[ext_resource type="Texture2D" uid="uid://d2txwmkt3se3" path="res://Assets/Shells/Morgan.png" id="1_wanqx"]
[ext_resource type="Texture2D" uid="uid://q8ev57xwdwmb" path="res://Assets/Shells/Morgan_Hurt.png" id="2_8i0h0"]
[ext_resource type="Texture2D" uid="uid://c2koxr6ycpqmm" path="res://Assets/Shells/Attack_Morgan.png" id="2_8n0g8"]

[sub_resource type="Animation" id="Animation_faskf"]
resource_name = "Attack"
length = 1.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8n0g8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11]
}

[sub_resource type="Animation" id="Animation_1b7yw"]
resource_name = "Capa"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_wanqx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ipksh"]
resource_name = "Hurt"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8i0h0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_8vgso"]
resource_name = "Idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_wanqx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_yq58q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_scmdu"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_wanqx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_54lh7"]
_data = {
"Attack": SubResource("Animation_faskf"),
"Capa": SubResource("Animation_1b7yw"),
"Hurt": SubResource("Animation_ipksh"),
"Idle": SubResource("Animation_8vgso"),
"RESET": SubResource("Animation_yq58q"),
"Walk": SubResource("Animation_scmdu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sikis"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2ptx8"]
animation = &"Capa"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0ay4j"]
animation = &"Hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2kcrw"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1m3wf"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xuqht"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aa4ny"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2f2av"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p4aqh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vfqom"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2e6is"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ysix5"]
states/Attack/node = SubResource("AnimationNodeAnimation_sikis")
states/Attack/position = Vector2(498.222, 95.8565)
states/Capa/node = SubResource("AnimationNodeAnimation_2ptx8")
states/Capa/position = Vector2(405.333, 94.9676)
states/End/position = Vector2(1052, 116.448)
states/Hurt/node = SubResource("AnimationNodeAnimation_0ay4j")
states/Hurt/position = Vector2(498.667, 1.63423)
states/Idle/node = SubResource("AnimationNodeAnimation_2kcrw")
states/Idle/position = Vector2(285.333, 43.7949)
states/Start/position = Vector2(126.667, 43.8747)
states/Walk/node = SubResource("AnimationNodeAnimation_1m3wf")
states/Walk/position = Vector2(405.333, 2.96756)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_xuqht"), "Idle", "Capa", SubResource("AnimationNodeStateMachineTransition_aa4ny"), "Capa", "Walk", SubResource("AnimationNodeStateMachineTransition_2f2av"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_p4aqh"), "Walk", "Hurt", SubResource("AnimationNodeStateMachineTransition_vfqom"), "Capa", "Attack", SubResource("AnimationNodeStateMachineTransition_2e6is")]
graph_offset = Vector2(-62.3751, -61.6991)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v5m4l"]
radius = 14.0
height = 70.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f0e23"]
height = 96.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkllt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4q7xc"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 0)

[node name="Morgan" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_i46ug")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_wanqx")
hframes = 7
vframes = 2
frame = 1

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_54lh7")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ysix5")
anim_player = NodePath("../Anim")
active = true

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("CapsuleShape2D_v5m4l")

[node name="Ray_R" type="RayCast2D" parent="."]
scale = Vector2(3, 3)
target_position = Vector2(20, 0)
collision_mask = 3
collide_with_areas = true

[node name="Ray_L" type="RayCast2D" parent="."]
scale = Vector2(3, 3)
target_position = Vector2(-23, 0)
collision_mask = 3
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="Shape" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f0e23")
debug_color = Color(1, 1, 1, 0.419608)

[node name="Health" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -61.0
offset_top = -64.0
offset_right = -21.0
offset_bottom = -24.0

[node name="HealthBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_top = 15.0
offset_right = 113.0
offset_bottom = 27.0
theme_override_styles/background = SubResource("StyleBoxFlat_rkllt")
theme_override_styles/fill = SubResource("StyleBoxFlat_4q7xc")
show_percentage = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Health" to="." method="_on_health_timeout"]
